dev/tests/cases/neg/05_decl_type_mismatch.tv
df main() -> void {
    set x: i64 = "hello";
}
